--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = {version = "1.0.139", features = ["derive"]}
 reqwest = { version = "0.11.11", features = ["json"]}
 mongodb = { version = "2.2.2", features = ["tokio-sync"] }
 chrono = "0.4.19"
+regex = "1.6.0"
