--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ reqwest = { version = "0.11.11", features = ["json"]}
 mongodb = { version = "2.2.2", features = ["tokio-sync"] }
 chrono = "0.4.19"
 regex = "1.6.0"
+log = "0.4.17"
+pretty_env_logger = "0.4.0"
